ciliumnetworkpol/l7pol-all-frontend-get-results.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-frontend-get-results
  namespace: voting-app
spec:
  endpointSelector:
    matchLabels:
      app: result
  ingress:
    - fromEndpoints: []
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/"
