ciliumnetworkpol/l7pol-allow-get-health.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-monitoring-health
  namespace: voting-app
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            severity: critical
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/health"
