ciliumnetworkpol/l7pol-allow-icmp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-icmp
  namespace: voting-app
spec:
  endpointSelector: {}
  ingress:
  - icmps:
    - {}
  egress:
  - icmps:
    - {}
